--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,26 @@
   "version": 2,
   "builds": [
     {
-      "src": "**/*",
+      "src": "**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "handle": "filesystem"
+      "src": "/assets/images/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/assets/images/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/$1",
+      "continue": true
     }
   ],
   "images": {
     "sizes": [640, 750, 828, 1080, 1200],
     "domains": ["vercel.app"],
-    "formats": ["image/webp"]
+    "formats": ["image/webp"],
+    "minimumCacheTTL": 60
   }
 }
